build computerPlay() function

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <title>Document</title>
 </head>
 
-<body>
+<body style="background-color: bisque;">
+    <header style="text-align: center;">
+        <h1>PROJECT: ROCK PAPER SCISSORS</h1>
+        <h2>Introduction</h2>
+        <article><i><h3>We’re going to make a simple implementation of grade-school classic “rock paper scissors”. If you don’t know what that is check the Wikipedia article or this ridiculous step-by-step. For the moment we’re just going to play the game from the browser console, but we will revisit it and add a front end later so don’t forget to keep the code on GitHub! You might notice some ‘view in browser’ links in the student solutions - this is coming in a later lesson. When you get there don’t forget to come back and add your link!</h3></i></article>
+        <h1>This game is going to be played completely from the console</h1>
+    </header>
+
     <script src="main.js"></script>
 </body>
 
